unpackaged/main/default/objects/Account/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <label>School Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academie/ rectorat</fullName>
            </value>
            <value>
                <fullName>Association étudiante</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>Centre de formation</fullName>
            </value>
            <value>
                <fullName>Chambre commerce industrie</fullName>
            </value>
            <value>
                <fullName>Chambre des métiers</fullName>
            </value>
            <value>
                <fullName>Ecole BTP</fullName>
            </value>
            <value>
                <fullName>Ecole d' Ingénieurs</fullName>
            </value>
            <value>
                <fullName>Ecole de commerce</fullName>
            </value>
            <value>
                <fullName>Ecole hotelière</fullName>
            </value>
            <value>
                <fullName>Ecole mode</fullName>
            </value>
            <value>
                <fullName>Ecole sup informatique</fullName>
            </value>
            <value>
                <fullName>Formation continue</fullName>
            </value>
            <value>
                <fullName>Greta</fullName>
            </value>
            <value>
                <fullName>IAE</fullName>
            </value>
            <value>
                <fullName>IUT</fullName>
            </value>
            <value>
                <fullName>Junior entreprise</fullName>
            </value>
            <value>
                <fullName>Lycee général</fullName>
            </value>
            <value>
                <fullName>Lycee hotelier</fullName>
            </value>
            <value>
                <fullName>Lycee polyvalent</fullName>
            </value>
            <value>
                <fullName>Lycee privé</fullName>
            </value>
            <value>
                <fullName>Lycee professionnel</fullName>
            </value>
            <value>
                <fullName>Lycee technique</fullName>
            </value>
            <value>
                <fullName>Lycée</fullName>
            </value>
            <value>
                <fullName>Lycée public</fullName>
            </value>
            <value>
                <fullName>Université</fullName>
            </value>
            <value>
                <fullName>Lycee technologique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>