unpackaged/main/default/objects/Account/fields/SedentaryCode__c.field-meta.xml
<CustomField>
    <fullName>SedentaryCode__c</fullName>
    <label>Sedentary Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>