unpackaged/main/default/objects/Account/fields/Segment_360__c.field-meta.xml
<CustomField>
    <fullName>Segment_360__c</fullName>
    <label>Segment 360</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Gold</fullName>
            </value>
            <value>
                <fullName>2 Silver</fullName>
            </value>
            <value>
                <fullName>3 Bronze</fullName>
            </value>
            <value>
                <fullName>4 New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>