unpackaged/main/default/objects/Account/fields/Server_Site__c.field-meta.xml
<CustomField>
    <fullName>Server_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Server Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Server Sites</relationshipLabel>
    <relationshipName>ServerSites</relationshipName>
    <type>Lookup</type>
</CustomField>