unpackaged/main/default/objects/Account/fields/Siren_Siret__c.field-meta.xml
<CustomField>
    <fullName>Siren_Siret__c</fullName>
    <description>Siren / Siret</description>
    <label>Siren/Siret</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>