unpackaged/main/default/objects/Account/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main site</fullName>
            </value>
            <value>
                <fullName>Remote site</fullName>
            </value>
            <value>
                <fullName>Secondary site</fullName>
            </value>
            <value>
                <fullName>Delivery site</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>