unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Validated</fullName>
                <default>true</default>
                <label>To Be Validated</label>
            </value>
            <value>
                <fullName>In Progress Validation</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>To Be Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>