unpackaged/main/default/objects/Account/fields/Talent_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Talent_Acquisition_Date__c</fullName>
    <description>Talent Acquisition Date</description>
    <label>Talent Acquisition Date</label>
    <type>Date</type>
</CustomField>