unpackaged/main/default/objects/Account/fields/Talent_Editor__c.field-meta.xml
<CustomField>
    <fullName>Talent_Editor__c</fullName>
    <label>Talent Editor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cegid</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SuccessFactor</fullName>
            </value>
            <value>
                <fullName>Talentsoft</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>