unpackaged/main/default/objects/Account/fields/TECH_Administrative_Compliance__c.field-meta.xml
<CustomField>
    <fullName>TECH_Administrative_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Administrative Compliance</label>
    <type>Checkbox</type>
</CustomField>