unpackaged/main/default/objects/Account/fields/TECH_AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>TECH_AnnualRevenue__c</fullName>
    <description>AnnualRevenue converted to text, with "Treat blank fields as blanks".
Used in the formula Account_Quality_Score__c.</description>
    <formula>TEXT(AnnualRevenue)</formula>
    <label>TECH Annual Revenue</label>
    <type>Text</type>
</CustomField>