unpackaged/main/default/objects/Account/fields/Tech_appetance_for_2__c.field-meta.xml
<CustomField>
    <fullName>Tech_appetance_for_2__c</fullName>
    <description>Appetence field for territory assignment rule</description>
    <formula>OR(
ISPICKVAL(Appetence_For__c, "Finance"),
ISPICKVAL( Appetence_For__c , "Tax Solutions"),
ISPICKVAL( Appetence_For__c , "ERP Middle Solutions"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech appetance for 2</label>
    <type>Checkbox</type>
</CustomField>