unpackaged/main/default/objects/Account/fields/Tech_appetence_for__c.field-meta.xml
<CustomField>
    <fullName>Tech_appetence_for__c</fullName>
    <description>Value of appetence field for territory assignment rule</description>
    <formula>OR(
ISPICKVAL( Appetence_For__c , "Outil de production CPA")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech appetence for</label>
    <type>Checkbox</type>
</CustomField>