unpackaged/main/default/objects/Account/fields/Tech_Code_NAF_Finance_large_Mid_1_3__c.field-meta.xml
<CustomField>
    <fullName>Tech_Code_NAF_Finance_large_Mid_1_3__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR(
BEGINS( Industry_Code__r.Name  ,"2511Z"),
BEGINS( Industry_Code__r.Name  ,"2512Z"),
BEGINS( Industry_Code__r.Name  ,"2521Z"),
BEGINS( Industry_Code__r.Name  ,"2529Z"),
BEGINS( Industry_Code__r.Name  ,"2530Z"),
BEGINS( Industry_Code__r.Name  ,"2540Z"),
BEGINS( Industry_Code__r.Name  ,"2550A"),
BEGINS( Industry_Code__r.Name  ,"2550B"),
BEGINS( Industry_Code__r.Name  ,"2561Z"),
BEGINS( Industry_Code__r.Name  ,"2562A"),
BEGINS( Industry_Code__r.Name  ,"2562B"),
BEGINS( Industry_Code__r.Name  ,"2571Z"),
BEGINS( Industry_Code__r.Name  ,"2572Z"),
BEGINS( Industry_Code__r.Name  ,"2573A"),
BEGINS( Industry_Code__r.Name  ,"2573B"),
BEGINS( Industry_Code__r.Name  ,"2591Z"),
BEGINS( Industry_Code__r.Name  ,"2592Z"),
BEGINS( Industry_Code__r.Name  ,"2593Z"),
BEGINS( Industry_Code__r.Name  ,"2594Z"),
BEGINS( Industry_Code__r.Name  ,"2599A"),
BEGINS( Industry_Code__r.Name  ,"2599B"),
BEGINS( Industry_Code__r.Name  ,"2611Z"),
BEGINS( Industry_Code__r.Name  ,"2612Z"),
BEGINS( Industry_Code__r.Name  ,"2620Z"),
BEGINS( Industry_Code__r.Name  ,"2630Z"),
BEGINS( Industry_Code__r.Name  ,"2640Z"),
BEGINS( Industry_Code__r.Name  ,"2651A"),
BEGINS( Industry_Code__r.Name  ,"2651B"),
BEGINS( Industry_Code__r.Name  ,"2652Z"),
BEGINS( Industry_Code__r.Name  ,"2660Z"),
BEGINS( Industry_Code__r.Name  ,"2670Z"),
BEGINS( Industry_Code__r.Name  ,"2680Z"),
BEGINS( Industry_Code__r.Name  ,"2711Z"),
BEGINS( Industry_Code__r.Name  ,"2712Z"),
BEGINS( Industry_Code__r.Name  ,"2720Z"),
BEGINS( Industry_Code__r.Name  ,"2731Z"),
BEGINS( Industry_Code__r.Name  ,"2732Z"),
BEGINS( Industry_Code__r.Name  ,"2733Z"),
BEGINS( Industry_Code__r.Name  ,"2740Z"),
BEGINS( Industry_Code__r.Name  ,"2751Z"),
BEGINS( Industry_Code__r.Name  ,"2752Z"),
BEGINS( Industry_Code__r.Name  ,"2790Z"),
BEGINS( Industry_Code__r.Name  ,"2811Z"),
BEGINS( Industry_Code__r.Name  ,"2812Z"),
BEGINS( Industry_Code__r.Name  ,"2813Z"),
BEGINS( Industry_Code__r.Name  ,"2814Z"),
BEGINS( Industry_Code__r.Name  ,"2815Z"),
BEGINS( Industry_Code__r.Name  ,"2821Z"),
BEGINS( Industry_Code__r.Name  ,"2822Z"),
BEGINS( Industry_Code__r.Name  ,"2823Z"),
BEGINS( Industry_Code__r.Name  ,"2824Z"),
BEGINS( Industry_Code__r.Name  ,"2825Z"),
BEGINS( Industry_Code__r.Name  ,"2829A"),
BEGINS( Industry_Code__r.Name  ,"2829B"),
BEGINS( Industry_Code__r.Name  ,"2830Z"),
BEGINS( Industry_Code__r.Name  ,"2841Z"),
BEGINS( Industry_Code__r.Name  ,"2849Z"),
BEGINS( Industry_Code__r.Name  ,"2891Z"),
BEGINS( Industry_Code__r.Name  ,"2892Z"),
BEGINS( Industry_Code__r.Name  ,"2893Z"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Code NAF Finance large &amp; Mid 1_3</label>
    <type>Checkbox</type>
</CustomField>