unpackaged/main/default/objects/Account/fields/Tech_Code_NAF_Finance_large_Mid_1_3_b__c.field-meta.xml
<CustomField>
    <fullName>Tech_Code_NAF_Finance_large_Mid_1_3_b__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR(
BEGINS( Industry_Code__r.Name  ,"2894Z"),
BEGINS( Industry_Code__r.Name  ,"2895Z"),
BEGINS( Industry_Code__r.Name  ,"2896Z"),
BEGINS( Industry_Code__r.Name  ,"2899A"),
BEGINS( Industry_Code__r.Name  ,"2899B"),
BEGINS( Industry_Code__r.Name  ,"2910Z"),
BEGINS( Industry_Code__r.Name  ,"2920Z"),
BEGINS( Industry_Code__r.Name  ,"2931Z"),
BEGINS( Industry_Code__r.Name  ,"2932Z"),
BEGINS( Industry_Code__r.Name  ,"3011Z"),
BEGINS( Industry_Code__r.Name  ,"3012Z"),
BEGINS( Industry_Code__r.Name  ,"3020Z"),
BEGINS( Industry_Code__r.Name  ,"3030Z"),
BEGINS( Industry_Code__r.Name  ,"3040Z"),
BEGINS( Industry_Code__r.Name  ,"3091Z"),
BEGINS( Industry_Code__r.Name  ,"3092Z"),
BEGINS( Industry_Code__r.Name  ,"3099Z"),
BEGINS( Industry_Code__r.Name  ,"3101Z"),
BEGINS( Industry_Code__r.Name  ,"3102Z"),
BEGINS( Industry_Code__r.Name  ,"3103Z"),
BEGINS( Industry_Code__r.Name  ,"3109A"),
BEGINS( Industry_Code__r.Name  ,"3109B"),
BEGINS( Industry_Code__r.Name  ,"3211Z"),
BEGINS( Industry_Code__r.Name  ,"3212Z"),
BEGINS( Industry_Code__r.Name  ,"3213Z"),
BEGINS( Industry_Code__r.Name  ,"3220Z"),
BEGINS( Industry_Code__r.Name  ,"3230Z"),
BEGINS( Industry_Code__r.Name  ,"3240Z"),
BEGINS( Industry_Code__r.Name  ,"3250A"),
BEGINS( Industry_Code__r.Name  ,"3250B"),
BEGINS( Industry_Code__r.Name  ,"3291Z"),
BEGINS( Industry_Code__r.Name  ,"3299Z"),
BEGINS( Industry_Code__r.Name  ,"3311Z"),
BEGINS( Industry_Code__r.Name  ,"3312Z"),
BEGINS( Industry_Code__r.Name  ,"3313Z"),
BEGINS( Industry_Code__r.Name  ,"3314Z"),
BEGINS( Industry_Code__r.Name  ,"3315Z"),
BEGINS( Industry_Code__r.Name  ,"3316Z"),
BEGINS( Industry_Code__r.Name  ,"3317Z"),
BEGINS( Industry_Code__r.Name  ,"3319Z"),
BEGINS( Industry_Code__r.Name  ,"3320A"),
BEGINS( Industry_Code__r.Name  ,"3320B"),
BEGINS( Industry_Code__r.Name  ,"3320C"),
BEGINS( Industry_Code__r.Name  ,"3320D"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Code NAF Finance large &amp; Mid 1_3(b)</label>
    <type>Checkbox</type>
</CustomField>