unpackaged/main/default/objects/Account/fields/Tech_Code_NAF_Finance_large_Mid_1_6_b__c.field-meta.xml
<CustomField>
    <fullName>Tech_Code_NAF_Finance_large_Mid_1_6_b__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR(
BEGINS( Industry_Code__r.Name  ,"1071B"),
BEGINS( Industry_Code__r.Name  ,"1071C"),
BEGINS( Industry_Code__r.Name  ,"1071D"),
BEGINS( Industry_Code__r.Name  ,"1072Z"),
BEGINS( Industry_Code__r.Name  ,"1073Z"),
BEGINS( Industry_Code__r.Name  ,"1081Z"),
BEGINS( Industry_Code__r.Name  ,"1082Z"),
BEGINS( Industry_Code__r.Name  ,"1083Z"),
BEGINS( Industry_Code__r.Name  ,"1084Z"),
BEGINS( Industry_Code__r.Name  ,"1085Z"),
BEGINS( Industry_Code__r.Name  ,"1086Z"),
BEGINS( Industry_Code__r.Name  ,"1089Z"),
BEGINS( Industry_Code__r.Name  ,"1091Z"),
BEGINS( Industry_Code__r.Name  ,"1092Z"),
BEGINS( Industry_Code__r.Name  ,"1101Z"),
BEGINS( Industry_Code__r.Name  ,"1102A"),
BEGINS( Industry_Code__r.Name  ,"1102B"),
BEGINS( Industry_Code__r.Name  ,"1103Z"),
BEGINS( Industry_Code__r.Name  ,"1104Z"),
BEGINS( Industry_Code__r.Name  ,"1105Z"),
BEGINS( Industry_Code__r.Name  ,"1106Z"),
BEGINS( Industry_Code__r.Name  ,"1107A"),
BEGINS( Industry_Code__r.Name  ,"1107B"),
BEGINS( Industry_Code__r.Name  ,"1200Z"),
BEGINS( Industry_Code__r.Name  ,"4611Z"),
BEGINS( Industry_Code__r.Name  ,"4617A"),
BEGINS( Industry_Code__r.Name  ,"4617B"),
BEGINS( Industry_Code__r.Name  ,"4621Z"),
BEGINS( Industry_Code__r.Name  ,"4622Z"),
BEGINS( Industry_Code__r.Name  ,"4623Z"),
BEGINS( Industry_Code__r.Name  ,"4624Z"),
BEGINS( Industry_Code__r.Name  ,"4631Z"),
BEGINS( Industry_Code__r.Name  ,"4632A"),
BEGINS( Industry_Code__r.Name  ,"4632B"),
BEGINS( Industry_Code__r.Name  ,"4632C"),
BEGINS( Industry_Code__r.Name  ,"4633Z"),
BEGINS( Industry_Code__r.Name  ,"4634Z"),
BEGINS( Industry_Code__r.Name  ,"4635Z"),
BEGINS( Industry_Code__r.Name  ,"4636Z"),
BEGINS( Industry_Code__r.Name  ,"4637Z"),
BEGINS( Industry_Code__r.Name  ,"4638A"),
BEGINS( Industry_Code__r.Name  ,"4638B"),
BEGINS( Industry_Code__r.Name  ,"4639A"),
BEGINS( Industry_Code__r.Name  ,"4639B"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Code NAF Finance large &amp; Mid 1_6(b)</label>
    <type>Checkbox</type>
</CustomField>