unpackaged/main/default/objects/Account/fields/Tech_Code_NAF_Finance_large_Mid__c.field-meta.xml
<CustomField>
    <fullName>Tech_Code_NAF_Finance_large_Mid__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR(
BEGINS( Industry_Code__r.Name  , '6420Z'),
BEGINS( Industry_Code__r.Name  , '7010Z'))</formula>
    <label>Tech Code NAF Finance large &amp; Mid</label>
    <type>Checkbox</type>
</CustomField>