unpackaged/main/default/objects/Account/fields/Tech_Contact_Direct__c.field-meta.xml
<CustomField>
    <fullName>Tech_Contact_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Contact_Direct</label>
    <type>Checkbox</type>
</CustomField>