unpackaged/main/default/objects/Account/fields/TECH_Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>TECH_Converted_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Converted From Lead</label>
    <type>Checkbox</type>
</CustomField>