unpackaged/main/default/objects/Account/fields/TECH_Finance_Large_1_3__c.field-meta.xml
<CustomField>
    <fullName>TECH_Finance_Large_1_3__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR (
BEGINS( Industry_Code__r.Name ,"13"),
BEGINS( Industry_Code__r.Name ,"14"),
BEGINS( Industry_Code__r.Name ,"15"),
BEGINS( Industry_Code__r.Name ,"16"),
BEGINS( Industry_Code__r.Name ,"17"),
BEGINS( Industry_Code__r.Name ,"19"),
BEGINS( Industry_Code__r.Name ,"20"),
BEGINS( Industry_Code__r.Name ,"22"),
BEGINS( Industry_Code__r.Name ,"23"),
BEGINS( Industry_Code__r.Name ,"24"),
BEGINS( Industry_Code__r.Name ,"25"),
BEGINS( Industry_Code__r.Name ,"49"),
BEGINS( Industry_Code__r.Name ,"50"),
BEGINS( Industry_Code__r.Name ,"51"),
BEGINS( Industry_Code__r.Name ,"52"),
BEGINS( Industry_Code__r.Name ,"53")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Finance Large 1 - 3</label>
    <type>Checkbox</type>
</CustomField>