unpackaged/main/default/objects/Account/fields/TECH_Finance_Large_1_4__c.field-meta.xml
<CustomField>
    <fullName>TECH_Finance_Large_1_4__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR (
BEGINS( Industry_Code__r.Name ,"01"),
BEGINS( Industry_Code__r.Name ,"02"),
BEGINS( Industry_Code__r.Name ,"03"),
BEGINS( Industry_Code__r.Name ,"10"),
BEGINS( Industry_Code__r.Name ,"11"),
BEGINS( Industry_Code__r.Name ,"12"),
BEGINS( Industry_Code__r.Name ,"4611"),
BEGINS( Industry_Code__r.Name ,"4617"),
BEGINS( Industry_Code__r.Name ,"4621"),
BEGINS( Industry_Code__r.Name ,"4622"),
BEGINS( Industry_Code__r.Name ,"4623"),
BEGINS( Industry_Code__r.Name ,"4624"),
BEGINS( Industry_Code__r.Name ,"4631"),
BEGINS( Industry_Code__r.Name ,"4632"),
BEGINS( Industry_Code__r.Name ,"4633"),
BEGINS( Industry_Code__r.Name ,"4634"),
BEGINS( Industry_Code__r.Name ,"4635"),
BEGINS( Industry_Code__r.Name ,"4636"),
BEGINS( Industry_Code__r.Name ,"4637"),
BEGINS( Industry_Code__r.Name ,"4638"),
BEGINS( Industry_Code__r.Name ,"4639")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Finance Large 1 - 4</label>
    <type>Checkbox</type>
</CustomField>