unpackaged/main/default/objects/Account/fields/TECH_Finance_Large_1_5__c.field-meta.xml
<CustomField>
    <fullName>TECH_Finance_Large_1_5__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR (
BEGINS( Industry_Code__r.Name ,"26"),
BEGINS( Industry_Code__r.Name ,"27"),
BEGINS( Industry_Code__r.Name ,"28"),
BEGINS( Industry_Code__r.Name ,"29"),
BEGINS( Industry_Code__r.Name ,"30"),
BEGINS( Industry_Code__r.Name ,"31"),
BEGINS( Industry_Code__r.Name ,"32"),
BEGINS( Industry_Code__r.Name ,"33"),
BEGINS( Industry_Code__r.Name ,"69"),
BEGINS( Industry_Code__r.Name ,"7021"),
BEGINS( Industry_Code__r.Name ,"7022"),
BEGINS( Industry_Code__r.Name ,"78"),
BEGINS( Industry_Code__r.Name ,"80"),
BEGINS( Industry_Code__r.Name ,"81"),
BEGINS( Industry_Code__r.Name ,"82"),
BEGINS( Industry_Code__r.Name ,"95"),
BEGINS( Industry_Code__r.Name ,"96"),
BEGINS( Industry_Code__r.Name ,"97"),
BEGINS( Industry_Code__r.Name ,"98")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Finance Large 1 - 5</label>
    <type>Checkbox</type>
</CustomField>