unpackaged/main/default/objects/Account/fields/TECH_Finance_Large__c.field-meta.xml
<CustomField>
    <fullName>TECH_Finance_Large__c</fullName>
    <description>Code NAF finance for territory assignment</description>
    <formula>OR (
BEGINS( Industry_Code__r.Name ,"642"),
BEGINS( Industry_Code__r.Name ,"701")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Finance Large</label>
    <type>Checkbox</type>
</CustomField>