unpackaged/main/default/objects/Account/fields/TECH_IsPrescribed__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsPrescribed__c</fullName>
    <formula>NOT(ISBLANK(Prescriber__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IsPrescribed</label>
    <type>Checkbox</type>
</CustomField>