unpackaged/main/default/objects/Account/fields/TECH_Lead_conversion__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lead_conversion__c</fullName>
    <label>TECH Lead conversion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>