unpackaged/main/default/objects/Account/fields/Tech_Nb_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tech_Nb_Contact__c</fullName>
    <description>Nombre de contacts (directs ou indirects) à la fois actifs et compliants.
Champ mis à jour dans la classe TH_Contact et dans les Flows ACR_OnCreate et ACR_OnDelete.</description>
    <label>Tech Nb Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>