unpackaged/main/default/objects/Account/fields/TECH_NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberOfEmployees__c</fullName>
    <description>NumberOfEmployees converted to text, with "Treat blank fields as blanks".
Used in the formula Account_Quality_Score__c.</description>
    <formula>TEXT(NumberOfEmployees)</formula>
    <label>TECH No. of Employees</label>
    <type>Text</type>
</CustomField>