unpackaged/main/default/objects/Account/fields/TECH_NumberOfOpenOpties__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberOfOpenOpties__c</fullName>
    <description>Counts the number of open opportunities to check whether the account should be synchronized with Infolegale</description>
    <label>TECH NumberOfOpenOpties</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>G - MQL, F - Identify the needs, E - Analyze the needs, D - Draw up the solution, C - Validate the solution, B - Negotiate, A - Sign</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>