unpackaged/main/default/objects/Account/fields/TECH_oppy_byPass_US1705__c.field-meta.xml
<CustomField>
    <fullName>TECH_oppy_byPass_US1705__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH oppy byPass US1705</label>
    <type>Checkbox</type>
</CustomField>