unpackaged/main/default/objects/Account/fields/Tech_pays_Maghreb_territory__c.field-meta.xml
<CustomField>
    <fullName>Tech_pays_Maghreb_territory__c</fullName>
    <description>Billing country code for territory assignment rule</description>
    <formula>OR(
ISPICKVAL(  BillingCountryCode  ,"MA"),
ISPICKVAL(  BillingCountryCode  ,"DZ"),
ISPICKVAL(  BillingCountryCode ,"TN"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech pays Maghreb territory</label>
    <type>Checkbox</type>
</CustomField>