unpackaged/main/default/objects/Account/fields/Tech_Reason_Update_National_Id_VAT__c.field-meta.xml
<CustomField>
    <fullName>Tech_Reason_Update_National_Id_VAT__c</fullName>
    <label>TECH Reason Update National Id or VAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>